--- a/TradeArcher.Core/TradeArcher.Core.csproj
+++ b/TradeArcher.Core/TradeArcher.Core.csproj
@@ -6,10 +6,20 @@
   </PropertyGroup>
 
    <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
+       <PrivateAssets>all</PrivateAssets>
+       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+     </PackageReference>
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+       <PrivateAssets>all</PrivateAssets>
+       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+     </PackageReference>
+     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+   </ItemGroup>
 
    <ItemGroup>
-     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+     <Folder Include="Converters\" />
    </ItemGroup>
 </Project>
