--- a/TradeArcher.Core/TradeArcher.Core.csproj
+++ b/TradeArcher.Core/TradeArcher.Core.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
    <ItemGroup>
+     <PackageReference Include="CsvHelper" Version="15.0.5" />
      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
        <PrivateAssets>all</PrivateAssets>
