--- a/TradeArcher.Core/TradeArcher.Core.csproj
+++ b/TradeArcher.Core/TradeArcher.Core.csproj
@@ -7,13 +7,13 @@
 
    <ItemGroup>
      <PackageReference Include="CsvHelper" Version="15.0.5" />
-     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
-     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
+     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
        <PrivateAssets>all</PrivateAssets>
        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
      </PackageReference>
-     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
-     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
        <PrivateAssets>all</PrivateAssets>
        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
      </PackageReference>
@@ -22,5 +22,6 @@
 
    <ItemGroup>
      <Folder Include="Converters\" />
+     <Folder Include="Data\Migrations\" />
    </ItemGroup>
 </Project>
